fix: ajustando de acordo com imagem criada