@@ -1,26 +1,14 @@
-# Use a imagem oficial do OpenJDK 17 como base
-FROM openjdk:17 as builder
+FROM gradle:4.7.0-jdk8-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon 
 
-# Defina o diretório de trabalho
-WORKDIR /app
+FROM openjdk:8-jre-slim
 
-# Copie o Gradle Wrapper e os arquivos relacionados com o build
-COPY gradlew .
-COPY gradle gradle
-COPY build.gradle .
-COPY settings.gradle .
-COPY src src
+EXPOSE 8080
 
-COPY .gradle .gradle
+RUN mkdir /app
 
-RUN chmod +x ./gradlew && ./gradlew build -x test
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
 
-FROM openjdk:17-slim
-
-WORKDIR /app
-
-COPY --from=builder /app/build/libs/itau-gt8-challenge-0.0.1-SNAPSHOT.jar itau-challenge.jar
-
-# ENV SPRING_PROFILES_ACTIVE=prd
-
-ENTRYPOINT ["java", "-jar", "itau-challenge.jar"]
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
